--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,11 @@
+html, body {
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+}
+
 *, *:before, *:after {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -7,6 +15,7 @@
 .videoPlayer {
 	position: relative;
 	display: inline-block;
+	margin-top: 50px;
 }
 
 .videoPlayer__video {
