--- a/css/app.css
+++ b/css/app.css
@@ -16,6 +16,7 @@ html, body {
 	position: relative;
 	display: inline-block;
 	margin-top: 50px;
+	overflow: hidden;
 }
 
 .videoPlayer__video {
@@ -23,14 +24,44 @@ html, body {
 	width: 960px;
 	height: 500px;
 	background-color: #000;
+	position: relative;
+	z-index:1;
 }
 
 .videoPlayer__controls {
 	width: 100%;
 	height: 50px;
 	position: absolute;
+	z-index: 2;
+	left: 0;
 	bottom: 0;
 	background-color: rgba(0, 0, 0, .6);
+
+	-webkit-transition: bottom 250ms ease, opacity 350ms ease;
+}
+
+/*  ---------------
+	Controls Hidden
+	---------------  */
+
+.videoPlayer.controls-hidden .videoPlayer__controls {
+	bottom: -5px;
+	opacity: 0;
+}
+
+/*  ----------
+	Fullscreen
+	----------  */
+
+.videoPlayer.fullscreen .videoPlayer__controls {
+	z-index: 2147483647;
+	/*position: absolute;*/
+}
+/*hide controls from shadow DOM in webkit browsers*/
+/* hides controls only in fullscreen, but shows them in normal screen even if controls is set to false*/
+/*the most specific pseudo-element to target video controls on full screen*/
+video::-webkit-media-controls-enclosure {
+  display: none !important;
 }
 
 button {
@@ -73,19 +104,52 @@ button:focus {
 	z-index: 2;
 
 	height: 10px;
-	background-color: rgba(255, 255, 255, .4);
+	/*background-color: rgba(255, 255, 255, .4);*/
 
 	cursor: pointer;
+/*	box-shadow: -1px -1px 0 0 rgba(255,255,255,.4) inset,
+				1px 1px 0 0 rgba(255,255,255,.4) inset;*/
+}
+
+.progressbar__border {
+	position: absolute;
+	top: 0;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	border: 1px solid rgba(255,255,255,.4);
 }
 
 .progressbar__bar {
+	position: absolute;
+	top: 0;
+	left: 0px;
+	z-index:2;
+
 	height: 100%;
 	width: 0%;
-	background-color:#c0392b;
 
-	/*-webkit-transition: width 500ms ease;*/
-	/*transition: width 500ms ease;*/
+	background-color:#c0392b;
 }
+
+.progressbar__bufferbar {
+	position: absolute;
+	top: 0;
+	left: 0px;
+	height: 100%;
+	width: 0%;
+	z-index:1;
+	background-color:rgba(255,255,255,.4);
+}
+
+.progressbar__bufferbar {
+	transition: width 500ms ease;
+	-webkit-transition: width 500ms ease;
+}
+
+/*.progressbar__bar,
+.progressbar__bufferbar {
+}*/
 
 .controls__comment,
 .controls__fullscreen {
@@ -136,7 +200,7 @@ button:focus {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 0px;
+	width: 100%;
 	height: 100%;
 	background-color: #c0392b;
 }
