--- a/css/app.css
+++ b/css/app.css
@@ -162,11 +162,15 @@ button:focus {
     user-select: none;
     -webkit-user-select: none;
 }
+
+.progressbar__time,
 .progressbar__mousetime {
 	opacity: 0;
 	-webkit-transition: opacity 300ms ease;
 	transition: opacity 300ms ease;
 }
+
+.progressbar__time.visible,
 .videoPlayer.mousetime-visible .progressbar__mousetime {
 	opacity: 1;
 }
@@ -357,6 +361,15 @@ button:focus {
 	Utils
 	------  */
 
+/*
 .hidden {
 	visibility: hidden;
 }
+.opacity-0 {
+	opacity: 0;
+	-webkit-transition: opacity 300ms ease;
+	transition: opacity 300ms ease;
+}
+.opacity-1 {
+	opacity: 1;
+}*/
